@@ -23,7 +23,8 @@ Release 0.19.2 - Unreleased
    HBASE-1352  incrementColumnValue/Memcache bug
    HBASE-1279  Fix the way hostnames and IPs are handled
    HBASE-1368  HBASE-1279 broke the build
-
+   HBASE-1264  Wrong return values of comparators for ColumnValueFilter
+               (Thomas Schneider via Andrew Purtell)
 
 Release 0.19.1 - 03/19/2009
   BUG FIXES
